[workspace]
members = [
  "crates/aliveness",
  "crates/approx_derive",
  "crates/argument_parsers",
  "crates/audio",
  "crates/ball_filter",
  "crates/bevy_mujoco",
  "crates/bevyhavior_simulator",
  "crates/booster",
  "crates/buffered_watch",
  "crates/calibration",
  "crates/code_generation",
  "crates/communication",
  "crates/context_attribute",
  "crates/control",
  "crates/coordinate_systems",
  "crates/egui_bevy",
  "crates/energy_optimization",
  "crates/filtering",
  "crates/framework",
  "crates/geometry",
  "crates/hardware",
  "crates/hula_types",
  "crates/hulk_booster",
  "crates/hulk_imagine",
  "crates/hulk_manifest",
  "crates/hulk_mujoco",
  "crates/hulk_replayer",
  "crates/hulk_widgets",
  "crates/hungarian_algorithm",
  "crates/kinematics",
  "crates/linear_algebra",
  "crates/motionfile",
  "crates/nao",
  "crates/object_detection",
  "crates/opn",
  "crates/parameters",
  "crates/path_serde",
  "crates/path_serde_derive",
  "crates/projection",
  "crates/ransac",
  "crates/repository",
  "crates/ros2",
  "crates/simulation_message",
  "crates/source_analyzer",
  "crates/spl_network",
  "crates/spl_network_messages",
  "crates/step_planning",
  "crates/step_planning_solver",
  "crates/types",
  "crates/vision",
  "crates/walking_inference",
  "crates/world_state",
  "crates/zed",
  "tools/annotato",
  "tools/depp",
  "tools/fanta",
  "tools/mujoco-simulator/mujoco-rust-server",
  "tools/parameter_tester",
  "tools/pepsi",
  "tools/twix",
  "tools/vista",
  "tools/widget_gallery",
]
resolver = "2"
# services are built independently by yocto
exclude = [
  "services/aliveness",
  "services/power-panic",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/hulks/hulk"

[workspace.dependencies]
aliveness = { path = "crates/aliveness" }
alsa = "0.9.1"
approx = "0.5.1"
approx_derive = { path = "crates/approx_derive" }
argument_parsers = { path = "crates/argument_parsers" }
audio = { path = "crates/audio" }
awaitgroup = "0.7.0"
axum = { version = "0.8.4", features = ["ws"] }
ball_filter = { path = "crates/ball_filter" }
base64 = "0.22.1"
bat = { version = "0.25.0", default-features = false, features = [
  "paging",
  "regex-fancy",
] }
bevy = { version = "0.16.0", default-features = false }
bevy-inspector-egui = "0.29.1"
bevy_asset_loader = "0.22.0"
bevy_egui = "0.33.0"
bevy_mujoco = { path = "crates/bevy_mujoco" }
bevy_obj = "0.15"
bevy_panorbit_camera = { version = "0.26.0", features = ["bevy_egui"] }
bincode = "1.3.3"
bindgen = "0.71.1"
blake3 = { version = "1.8.2", features = ["mmap", "serde"] }
booster = { path = "crates/booster" }
buffered_watch = { path = "crates/buffered_watch" }
build_script_helpers = { path = "crates/build_script_helpers" }
byteorder = "1.5.0"
calibration = { path = "crates/calibration" }
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive", "env"] }
clap_complete = "4.5.44"
code_generation = { path = "crates/code_generation" }
color-eyre = "0.6.3"
communication = { path = "crates/communication" }
compiled-nn = "0.12.0"
context_attribute = { path = "crates/context_attribute" }
control = { path = "crates/control" }
convert_case = "0.7.1"
coordinate_systems = { path = "crates/coordinate_systems" }
ctrlc = { version = "3.4.5", features = ["termination"] }
derive_more = { version = "2.0.1", features = [
  "add",
  "add_assign",
  "mul",
  "not",
] }
dirs = "6.0.0"
eframe = { version = "0.31.1", features = ["persistence", "wgpu"] }
egui = { version = "=0.31.1", features = ["persistence"] }
egui_bevy = { path = "crates/egui_bevy" }
egui_dock = { version = "0.16.0", features = ["serde"] }
egui_extras = { version = "0.31.1", features = ["image"] }
egui_plot = "0.31.0"
energy_optimization = { path = "crates/energy_optimization" }
enum-iterator = "2.1.0"
enum_dispatch = "0.3.13"
env_logger = "0.11.8"
fast_image_resize = "5.1.2"
fern = { version = "0.7.1", features = ["colored"] }
filtering = { path = "crates/filtering" }
framework = { path = "crates/framework" }
futures-util = "0.3.31"
geometry = { path = "crates/geometry" }
gilrs = "0.11.0"
glob = "0.3.2"
hardware = { path = "crates/hardware" }
home = "=0.5.9"
hula_types = { path = "crates/hula_types" }
hulk_manifest = { path = "crates/hulk_manifest" }
hulk_mujoco = { path = "crates/hulk_mujoco" }
hulk_widgets = { path = "crates/hulk_widgets" }
hungarian_algorithm = { path = "crates/hungarian_algorithm" }
i2cdev = "0.6.1"
image = "0.25.5"
indicatif = "0.17.11"
itertools = "0.14.0"
ittapi = "0.4.0"
kinematics = { path = "crates/kinematics" }
lazy_static = "1.5.0"
levenberg-marquardt = "0.14.0"
libc = "0.2.169"
linear_algebra = { path = "crates/linear_algebra" }
log = "0.4.25"
mcap = "0.15.0"
mlua = { version = "0.10.3", features = ["luajit", "serialize", "vendored"] }
motionfile = { path = "crates/motionfile" }
nalgebra = { version = "0.33.2", features = [
  "convert-glam029",
  "serde",
  "serde-serialize",
] }
nao = { path = "crates/nao" }
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-conv = "0.4.1"
nix = { version = "0.29", features = ["ioctl"] }
nucleo-matcher = "0.3.1"
num-derive = "0.4.2"
num-dual = "0.11.1"
num-traits = "0.2"
object_detection = { path = "crates/object_detection" }
once_cell = "1.20.3"
openvino = { version = "0.8.0", features = ["runtime-linking"] }
opn = { path = "crates/opn" }
optimization_engine = "0.9.1"
opusfile-ng = "0.1.0"
ordered-float = "4.6.0"
ort = "=2.0.0-rc.10"
parameters = { path = "crates/parameters" }
parking_lot = "0.12.3"
parry2d = { version = "0.21.1", default-features = false, features = [
  "alloc",
  "required-features",
] }
path_serde = { path = "crates/path_serde" }
path_serde_derive = { path = "crates/path_serde_derive" }
pathdiff = "0.2.3"
pathfinding = "<=4.10.0"
petgraph = "0.7.1"
png = "0.17.16"
prettyplease = "0.2.29"
proc-macro-error = "1.0.4"
proc-macro2 = { version = "1.0.93", features = ["span-locations"] }
projection = { path = "crates/projection" }
proptest = "1.6.0"
pyo3 = { version = "0.27.1", features = ["abi3-py313", "extension-module"] }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
pyo3-log = { version = "0.14.0", git = "https://github.com/oleflb/pyo3-log.git", rev = "13a516dc494fd73c037b434a66d71ec069574211" }
quote = "1.0.38"
rand = "0.9.0"
rand_chacha = { version = "0.9.0", features = ["serde"] }
rand_distr = "0.5.0"
ransac = { path = "crates/ransac" }
regex = "1.11.1"
repository = { path = "crates/repository" }
reqwest = { version = "0.12.12", features = ["blocking"] }
rmp-serde = "1.3.0"
ros2 = { path = "crates/ros2" }
rustfft = "6.2.0"
scenario = { path = "crates/scenario" }
semver = "1.0.25"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde-transcode = "1.1.1"
serde_bytes = "0.11.15"
serde_derive = "1.0.228"
serde_ignored = "0.1.10"
serde_json = "1.0.138"
serde_test = "1.0.177"
sha2 = "0.10.8"
simba = "0.9.0"
simulation_message = { path = "crates/simulation_message" }
smallvec = "1.14.0"
source_analyzer = { path = "crates/source_analyzer" }
spl_network = { path = "crates/spl_network" }
spl_network_messages = { path = "crates/spl_network_messages" }
splines = { version = "=4.2.0", features = ["serde"] }
step_planning = { path = "crates/step_planning" }
step_planning_solver = { path = "crates/step_planning_solver" }
structopt = "0.3.26"
syn = { version = "2.0.98", features = ["extra-traits", "full"] }
systemd = "0.10.0"
tempfile = "3.17.0"
thiserror = "2.0.11"
threadbound = "0.1.7"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tokio-util = "0.7.13"
toml = "0.8.20"
toposort-scc = "0.5.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
types = { path = "crates/types" }
urdf-rs = "0.9.0"
uuid = { version = "1.12.1", features = ["v4"] }
v4l = { version = "0.12.1", git = "https://github.com/HULKs/libv4l-rs", rev = "be65819073514b193d082dd37dbcc2cfac3f6183" }
vision = { path = "crates/vision" }
walkdir = "2.5.0"
walking_inference = { path = "crates/walking_inference" }
watch = "0.2.3"
webots = { version = "0.8.0" }
wgpu = "24.0.5"
world_state = { path = "crates/world_state" }
xdg = "2.5.2"
zbus = "5.5.0"
zed = { path = "crates/zed" }

[patch.crates-io]
# Pinned to forked serde version since https://github.com/serde-rs/serde/pull/2513 is not merged
serde = { git = "https://github.com/HULKs/serde.git", rev = "ef30eb8fdd0ee12e4e6f3f5615c6bb022e02d1b2" }
# Pinned to forked serde version since https://github.com/serde-rs/serde/pull/2513 is not merged
serde_derive = { git = "https://github.com/HULKs/serde.git", rev = "ef30eb8fdd0ee12e4e6f3f5615c6bb022e02d1b2" }
# Pinned to forked serde version since https://github.com/serde-rs/serde/pull/2513 is not merged
serde_core = { git = "https://github.com/HULKs/serde.git", rev = "ef30eb8fdd0ee12e4e6f3f5615c6bb022e02d1b2" }

egui = { git = "https://github.com/HULKs/egui/", rev = "7a3a88dcbb46a24d49a2388b2d9c8a6a273a9d4e" }
egui-wgpu = { git = "https://github.com/HULKs/egui/", rev = "7a3a88dcbb46a24d49a2388b2d9c8a6a273a9d4e" }

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 16       # TODO: Evaluate performance for different values

[profile.with-debug]
inherits = "dev"
debug = true

[profile.debugger]
inherits = "with-debug"
opt-level = 0
