[workspace]
members = [
  "crates/aliveness",
  "crates/approx_derive",
  "crates/argument_parsers",
  "crates/audio",
  "crates/ball_filter",
  "crates/bevy_mujoco",
  # "crates/bevyhavior_simulator",
  "crates/booster",
  "crates/buffered_watch",
  "crates/calibration",
  "crates/code_generation",
  "crates/communication",
  "crates/context_attribute",
  "crates/coordinate_systems",
  "crates/egui_bevy",
  "crates/energy_optimization",
  "crates/filtering",
  "crates/framework",
  "crates/geometry",
  "crates/hardware",
  "crates/hsl_network",
  "crates/hsl_network_messages",
  "crates/hula_types",
  "crates/hulk_booster",
  "crates/hulk_imagine",
  "crates/hulk_manifest",
  "crates/hulk_mujoco",
  "crates/hulk_replayer",
  "crates/hulk_widgets",
  "crates/hungarian_algorithm",
  "crates/hydra",
  "crates/kinematics",
  "crates/linear_algebra",
  "crates/motion",
  "crates/motionfile",
  "crates/opn",
  "crates/parameters",
  "crates/path_serde",
  "crates/path_serde_derive",
  "crates/projection",
  "crates/ransac",
  "crates/repository",
  "crates/ros-z",
  "crates/ros-z-cdr",
  "crates/ros-z-cli",
  "crates/ros-z-derive",
  "crates/ros-z-protocol",
  "crates/ros-z-schema",
  "crates/ros-z-streams",
  "crates/ros2",
  "crates/sensor_receiver",
  "crates/simulation_message",
  "crates/source_analyzer",
  "crates/types",
  "crates/vision",
  "crates/walking_inference",
  "crates/world_state",
  "crates/zed",
  "crates/zenoh_bridge",
  "tools/annotato",
  "tools/depp",
  "tools/fanta",
  "tools/mujoco-simulator/mujoco-rust-server",
  "tools/parameter_tester",
  "tools/pepsi",
  "tools/tensorrt-compile",
  "tools/twix",
  "tools/vista",
  "tools/widget_gallery",
]
resolver = "2"
# services are built independently by yocto
exclude = [
  "services/aliveness",
  "services/power-panic",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
homepage = "https://github.com/hulks/hulk"

[workspace.dependencies]
aliveness = { path = "crates/aliveness" }
alsa = "0.11.0"
approx = "0.5.1"
approx_derive = { path = "crates/approx_derive" }
arc-swap = "1.7"
argument_parsers = { path = "crates/argument_parsers" }
atty = "0.2.14"
audio = { path = "crates/audio" }
ball_filter = { path = "crates/ball_filter" }
bat = { version = "0.25.0", default-features = false, features = [
  "paging",
  "regex-fancy",
] }
bevy = { version = "0.18.0", default-features = false }
bevy_mujoco = { path = "crates/bevy_mujoco" }
bevy_panorbit_camera = { version = "0.34.0", features = ["bevy_egui"] }
bincode = "1.3.3"
bindgen = "0.71.1"
blake3 = { version = "1.8.2", features = ["mmap", "serde"] }
booster = { path = "crates/booster" }
booster_sdk = "0.1.1-alpha.1"
buffered_watch = { path = "crates/buffered_watch" }
bytemuck = "1"
byteorder = "1.5.0"
bytes = { version = "1.11.0", features = ["serde"] }
calibration = { path = "crates/calibration" }
cdr = "0.2.4"
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive", "env"] }
clap_complete = "4.5.44"
code_generation = { path = "crates/code_generation" }
color-eyre = "0.6.3"
communication = { path = "crates/communication" }
context_attribute = { path = "crates/context_attribute" }
convert_case = "0.7.1"
coordinate_systems = { path = "crates/coordinate_systems" }
csv = "1.3.1"
ctrlc = { version = "3.4.5", features = ["termination"] }
derive_more = { version = "2.0.1", features = [
  "add",
  "add_assign",
  "mul",
  "not",
] }
dirs = "6.0.0"
eframe = { version = "0.33.3", features = ["persistence", "wgpu"] }
egui = { version = "0.33.3", features = ["persistence"] }
egui_bevy = { path = "crates/egui_bevy" }
egui_dock = { version = "0.18.0", features = ["serde"] }
egui_extras = { version = "0.33.3", features = ["image"] }
egui_plot = "0.34.0"
energy_optimization = { path = "crates/energy_optimization" }
enum-iterator = "2.1.0"
enum_dispatch = "0.3.13"
env_logger = "0.11.8"
event-listener = "5"
fern = { version = "0.7.1", features = ["colored"] }
filtering = { path = "crates/filtering" }
flume = "0.11.1"
framework = { path = "crates/framework" }
futures-util = "0.3.31"
geometry = { path = "crates/geometry" }
gilrs = "0.11.0"
glob = "0.3.2"
hardware = { path = "crates/hardware" }
hex = "0.4"
home = "=0.5.9"
hsl_network = { path = "crates/hsl_network" }
hsl_network_messages = { path = "crates/hsl_network_messages" }
hula_types = { path = "crates/hula_types" }
hulk_manifest = { path = "crates/hulk_manifest" }
hulk_widgets = { path = "crates/hulk_widgets" }
hungarian_algorithm = { path = "crates/hungarian_algorithm" }
hydra = { path = "crates/hydra" }
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
indicatif = "0.18.4"
insta = "1"
itertools = "0.14.0"
ittapi = "0.4.0"
json5 = "0.4.1"
kinematics = { path = "crates/kinematics" }
lazy_static = "1.5.0"
levenberg-marquardt = "0.15.0"
libc = "0.2.169"
linear_algebra = { path = "crates/linear_algebra" }
log = "0.4.25"
mcap = "0.15.0"
mlua = { version = "0.10.3", features = ["luajit", "serialize", "vendored"] }
motion = { path = "crates/motion" }
motionfile = { path = "crates/motionfile" }
nalgebra = { version = "0.34.2", features = [
  "convert-glam030",
  "serde",
  "serde-serialize",
] }
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-conv = "0.4.1"
nucleo-matcher = "0.3.1"
num-derive = "0.4.2"
num-dual = "0.13.2"
num-traits = "0.2"
once_cell = "1.20.3"
openvino = { version = "0.8.0", features = ["runtime-linking"] }
opn = { path = "crates/opn" }
optimization_engine = "0.9.1"
ordered-float = "4.6.0"
ort = "=2.0.0-rc.10"
parameters = { path = "crates/parameters" }
parking_lot = "0.12.3"
parry2d = { version = "0.26.0", default-features = false, features = [
  "alloc",
  "required-features",
] }
paste = "1.0"
path_serde = { path = "crates/path_serde" }
path_serde_derive = { path = "crates/path_serde_derive" }
pathdiff = "0.2.3"
pathfinding = "<=4.10.0"
prettyplease = "0.2.29"
proc-macro-error = "1.0.4"
proc-macro2 = { version = "1.0.93", features = ["span-locations"] }
projection = { path = "crates/projection" }
proptest = "1.6.0"
pyo3 = { version = "0.27.1", features = ["abi3-py313"] }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
pyo3-log = "0.13.2"
quote = "1.0.38"
rand = "0.9.0"
rand_chacha = { version = "0.9.0", features = ["serde"] }
rand_distr = "0.5.0"
ransac = { path = "crates/ransac" }
regex = "1.11.1"
repository = { path = "crates/repository" }
reqwest = { version = "0.12.28", features = ["blocking"] }
rmp-serde = "1.3.0"
robot = { path = "crates/robot" }
ros-z = { path = "crates/ros-z", features = ["nalgebra"] }
ros-z-cdr = { path = "crates/ros-z-cdr" }
ros-z-derive = { path = "crates/ros-z-derive" }
ros-z-protocol = { path = "crates/ros-z-protocol" }
ros-z-schema = { path = "crates/ros-z-schema" }
ros-z-streams = { path = "crates/ros-z-streams" }
ros2 = { path = "crates/ros2" }
ros2-client = { version = "0.8.2", features = ["pre-iron-gid"] }
rustfft = "6.2.0"
semver = "1.0.25"
sensor_receiver = { path = "crates/sensor_receiver" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde-big-array = "0.5"
serde_bytes = "0.11.15"
serde_ignored = "0.1.10"
serde_json = "1.0.138"
serde_yaml = "0.9"
serial_test = "3.0"
sha2 = "0.10.8"
simba = "0.9.0"
simulation_message = { path = "crates/simulation_message" }
slab = "0.4.11"
smallvec = "1.14.0"
smart-default = "0.7"
source_analyzer = { path = "crates/source_analyzer" }
splines = { version = "=4.2.0", features = ["serde"] }
strum = "0.27.2"
syn = { version = "2.0.98", features = ["extra-traits", "full"] }
systemd = "0.10.0"
tempfile = "3.17.0"
thiserror = "2.0.11"
threadbound = "0.1.7"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.26.1"
tokio-util = "0.7.13"
toml = "0.8.20"
toposort-scc = "0.5.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
trybuild = "1.0"
types = { path = "crates/types" }
uuid = { version = "1.12.1", features = ["v4"] }
vision = { path = "crates/vision" }
walking_inference = { path = "crates/walking_inference" }
wgpu = "27.0.0"
world_state = { path = "crates/world_state" }
xdg = "2.5.2"
yuv = "0.8.9"
zbus = "5.5.0"
zed = { path = "crates/zed" }
zenoh = { version = "1.7.2", default-features = false }
zenoh-buffers = "1.7.2"
zenoh-ext = { version = "1.7.2", features = ["unstable"] }

[patch.crates-io]
# Pinned to forked serde version since https://github.com/serde-rs/serde/pull/2513 is not merged
serde = { git = "https://github.com/HULKs/serde.git", rev = "ef30eb8fdd0ee12e4e6f3f5615c6bb022e02d1b2" }
# Pinned to forked serde version since https://github.com/serde-rs/serde/pull/2513 is not merged
serde_derive = { git = "https://github.com/HULKs/serde.git", rev = "ef30eb8fdd0ee12e4e6f3f5615c6bb022e02d1b2" }
# Pinned to forked serde version since https://github.com/serde-rs/serde/pull/2513 is not merged
serde_core = { git = "https://github.com/HULKs/serde.git", rev = "ef30eb8fdd0ee12e4e6f3f5615c6bb022e02d1b2" }
# Pin RTPS protocol version to 2.3
rustdds = { git = "https://github.com/HULKs/RustDDS.git", rev = "0232af0c67e25e39afb5eef0166edfe493762320" }

egui = { git = "https://github.com/HULKs/egui/", rev = "c310aad9c54618e8845b6707899e2678fec8b842" }
egui-wgpu = { git = "https://github.com/HULKs/egui/", rev = "c310aad9c54618e8845b6707899e2678fec8b842" }
booster_sdk = { git = "https://github.com/IntelligentRoboticsLab/booster_sdk", rev = "638c1973c0a1a729b47b1133af5b4af16a41b9bd" }

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 16       # TODO: Evaluate performance for different values

[profile.with-debug]
inherits = "dev"
debug = true

[profile.debugger]
inherits = "with-debug"
opt-level = 0
